fix(domain): 리스트 예외 버그 수정